# RMUC_simulation

./: .gitignore
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/sentry_userdefinition/: LocalizationInfo.h  QueryGlobalLocalization.h  QueryGlobalLocalizationRequest.h  QueryGlobalLocalizationResponse.h  ScanMatchingStatus.h  SetGlobalLocalizationEngine.h  SetGlobalLocalizationEngineRequest.h  SetGlobalLocalizationEngineResponse.h  SetGlobalMap.h  SetGlobalMapRequest.h  SetGlobalMapResponse.h
devel/lib/fast_gicp/: gicp_align  gicp_kitti
devel/lib/localization/: localization
devel/lib/ndt_omp/: align
devel/lib/pkgconfig/: fast_gicp.pc  livox_laser_simulation.pc  livox_ros_driver2.pc  localization.pc  ndt_omp.pc  point_lio.pc  sensor_scan_generation.pc  sentry_localization.pc  sentry_localizations.pc  sentry_navigation.pc  sentry_simulation.pc  sentry_userdefinition.pc  test_nodelet.pc  vehicle_simulator.pc
devel/lib/sentry_localization/: global_localization_node  livox_to_point
devel/lib/sentry_navigation/: my_test
devel/lib/sentry_simulation/: key_control  vehicleSimulator
devel/share/fast_gicp/cmake/: fast_gicpConfig.cmake
devel/share/livox_laser_simulation/cmake/: livox_laser_simulationConfig.cmake
devel/share/livox_ros_driver2/cmake/: livox_ros_driver2-msg-extras.cmake  livox_ros_driver2-msg-paths.cmake  livox_ros_driver2Config.cmake
devel/share/localization/cmake/: localizationConfig.cmake
devel/share/ndt_omp/cmake/: ndt_ompConfig.cmake
devel/share/point_lio/cmake/: point_lio-msg-paths.cmake  point_lioConfig.cmake
devel/share/sensor_scan_generation/cmake/: sensor_scan_generationConfig.cmake
devel/share/sentry_localization/cmake/: sentry_localizationConfig.cmake
devel/share/sentry_localizations/cmake/: sentry_localizationsConfig.cmake
devel/share/sentry_navigation/cmake/: sentry_navigationConfig.cmake
devel/share/sentry_simulation/cmake/: sentry_simulationConfig.cmake
devel/share/sentry_userdefinition/cmake/: sentry_userdefinition-msg-extras.cmake  sentry_userdefinition-msg-paths.cmake  sentry_userdefinitionConfig.cmake
src/: Readme.md
src/Point-LIO/: CMakeLists.txt
src/Point-LIO/config/: horizon.yaml
src/Point-LIO/launch/: mapping_horizon.launch
src/Point-LIO/src/: IMU_Processing.cpp  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.h  preprocess.cpp  preprocess.h
src/fast_gicp/src/python/: main.cpp
src/laser_simulator/livox_laser_simulation/: CMakeLists.txt
src/laser_simulator/livox_laser_simulation/launch/: livox_simulation.launch
src/laser_simulator/livox_laser_simulation/src/: livox_points_plugin.cpp
src/laser_simulator/livox_laser_simulation/urdf/: backup_livox_horizon.urdf.xacro  backup_livox_mini360.urdf.xacro  livox_mid360.urdf.xacro  multi_horizon.xacro  platform.urdf.xacro  standardrobots_oasis300.xacro
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: params.yaml
src/localization/include/: eigen_types.h  kdtree.h  localization.h  points_types.h
src/localization/launch/: localization.launch
src/localization/rviz/: test.rviz
src/localization/src/: localization.cpp
src/sentry_localization/: CMakeLists.txt  Readme.md  nodelet_plugin.xml  package.xml
src/sentry_localization/apps/: bbs_localization.cpp  global_localization_bbs.cpp  global_localization_fpfh_ransac.cpp  global_localization_fpfh_teaser.cpp  ransac_pose_estimation.cpp  voxelset.cpp
src/sentry_localization/config/: bbs_params.yaml  engine_params.yaml  globalmap_params.yaml  sentry_localization_params.yaml
src/sentry_localization/include/: delta_estimator.hpp  occupancy_gridmap.hpp  pose_estimator.hpp  pose_system.hpp  unscented_kalman_filter.hpp
src/sentry_localization/include/global_localization/: bbs_localization.hpp  occupancy_gridmap.hpp
src/sentry_localization/include/include/: std_cout.h
src/sentry_localization/include/include/global_localization/: global_localization_bbs.hpp  global_localization_engine.hpp  global_localization_results.hpp
src/sentry_localization/include/include/global_localization/bbs/: bbs_localization.hpp  occupancy_gridmap.hpp
src/sentry_localization/include/include/global_localization/engines/: global_localization_bbs.hpp  global_localization_engine.hpp  global_localization_fpfh_ransac.hpp  global_localization_fpfh_teaser.hpp
src/sentry_localization/include/include/global_localization/ransac/: matching_cost_evaluater.hpp  matching_cost_evaluater_flann.hpp  matching_cost_evaluater_voxels.hpp  ransac_pose_estimation.hpp  voxelset.hpp
src/sentry_localization/include/include/localization/: delta_estimator.hpp  odom_system.hpp  pose_estimator.hpp  pose_system.hpp  unscented_kalman_filter.hpp
src/sentry_localization/launch/: sentry_localization.launch
src/sentry_localization/nodelet/: globalmap_server_nodelet.cpp  sentry_localization_nodelet.cpp
src/sentry_localization/rviz/: test.rviz
src/sentry_localization/src/: global_localization.cpp  livox_to_pointcloud2.cpp  pose_estimator.cpp
src/sentry_navigation/: CMakeLists.txt
src/sentry_navigation/launch/: test.launch
src/sentry_navigation/rviz/: test.rviz
src/sentry_navigation/src/: overallmap.cpp  test.cpp
src/sentry_simulation/: CMakeLists.txt
src/sentry_simulation/include/sentry_simulation/: vehicle_simulator.h
src/sentry_simulation/launch/: old_view_sentry.launch  view_sentry.launch
src/sentry_simulation/mesh/: RMUC_2024.STL
src/sentry_simulation/src/: key_control.cpp  livox_ode_multiray_shape.cpp  livox_points_plugin.cpp  test.cpp  vehicleSimulator.cpp  vehicle_simulator.cpp
src/sentry_simulation/urdf/: imu.urdf.xacro  livox_mid360.urdf.xacro  sentry.urdf.xacro  sentry_base.urdf.xacro
src/sentry_simulation/world/: RMUC2024.world  Readme.md
src/sentry_userdefinition/: CMakeLists.txt  package.xml
src/sentry_userdefinition/msg/: ScanMatchingStatus.msg
src/sentry_userdefinition/srv/: QueryGlobalLocalization.srv
src/test_nodelet/: CMakeLists.txt  my_plus.xml  package.xml
src/test_nodelet/launch/: test.launch
src/test_nodelet/src/: test.cpp
(+53 files in other folders)
